--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,7 @@
 
   <title>sigma</title>
   <link rel="manifest" href="manifest.json">
+  <script type="application/javascript" src="/assets/packages/zikzak_inappwebview_web/assets/web/web_support.js" defer></script>
 
   <script>
     // The value below is injected by flutter build, do not touch.
